# StellarTask3

./: .gitignore  Cargo.toml  README.md  fix-clear-stale-error.patch  fix-enum-status.patch  fix-my-escrows.patch  fix-stale-status.patch  frontend-lint-and-i18n-fix.patch  frontend-lint-fix.patch  full-fix.diff  test-output.txt
.github/workflows/: main.yml
contracts/common/: Cargo.toml
contracts/common/src/: lib.rs
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs
contracts/factory/: Cargo.toml
contracts/factory/src/: lib.rs
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  sdk_exports.txt
frontend/src/: App.jsx  App.test.jsx  contracts.js
frontend/src/hooks/: useFreighter.js
scripts/: deploy.sh
